# bazel-intellij-194

./: WORKSPACE
demo_service/: BUILD.bazel  demo_service.proto
server/: BUILD.bazel  main.go
